--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ DATABASE_URL=mongodb://localhost:27017/your-database-name
 JWT_SECRET=secret
 AUTH_URL=http://localhost:3001/api/v1
 UPLOAD_URL=http://localhost:3002/api/v1
+SOCKET_URL=http://localhost:3003
