--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "randomstring": "^1.2.3",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
