--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": " A basic starter for an express.js API with Typescript. Ilkka added gts",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "copyGraphql": "copyfiles -E -u 1 src/api/schemas/*.graphql dist",
+    "postbuild": "npm run copyGraphql",
     "lint": "eslint --fix src test",
     "test": "jest --detectOpenHandles --forceExit --silent=false"
   },
@@ -24,6 +26,7 @@
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/merge": "^8.3.18",
     "@graphql-tools/schema": "^9.0.17",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "exif": "^0.6.0",
